# openblackhole-enigma2

./: README.md  configure.ac  skin.py
data/: Makefile.am  keymap.xml  menu.xml  skin.xml  startwizard.xml
data/skin_default/: Makefile.am
data/skin_default/LCDIcons/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/icons/: Makefile.am
data/skin_default/menu/: Makefile.am
data/skin_default/spinner/: Makefile.am
lib/gui/: ewidgetdesktop.cpp
lib/python/: enigma_python.i
lib/python/Components/: About.py  InputDevice.py  NimManager.py  UsageConfig.py
lib/python/Components/Converter/: Makefile.am
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Screens/: About.py  BpBlue.py  ChannelSelection.py  InfoBarGenerics.py  Makefile.am  MovieSelection.py  SoftwareUpdate.py
lib/python/Tools/: HardwareInfo.py
main/: enigma.cpp
