installdir = $(pkgdatadir)/skin_default/icons

dist_install_DATA = \
addons_manager.png \
ask.png \
az.png \
bullet.png \
ccc_activeclients.png \
ccc_clients.png \
ccc_entitlements.png \
ccc_home.png \
ccc_providers.png \
ccc_servers.png \
ccc_setup.png \
ccc_shares.png \
clock2.png \
clock.png \
default.png \
dev_cdrom.png \
dev_cf.png \
dev_hdd.png \
dev_sd.png \
dev_usb.png \
dish.png \
dish_scan.png \
dmm_logo.png \
dmm.png \
epgclock_add.png \
epgclock.png \
epgclock_post.png \
epgclock_pre.png \
epgclock_prepost.png \
fastplugin.png \
fast_plugin_setup.png \
faz.png \
folder.png \
fza.png \
hdsettings.png \
ico_dvb_c-fs8.png \
ico_dvb_s-fs8.png \
ico_dvb_t-fs8.png \
ico_mp_forward.png \
ico_mp_loop_off.png \
ico_mp_loop_on.png \
ico_mp_pause.png \
ico_mp_play.png \
ico_mp_random_off.png \
ico_mp_random_on.png \
ico_mp_rewind.png \
ico_mp_stop.png \
icon_avalon.png \
icon_chaos.png \
icon_crypt.png \
icon_dolby.png \
icon_event.png \
icon_format.png \
icon_ghost.png \
icon_hd.png \
icon_home_BH.png \
icon_info.png \
icon_nim_a.png \
icon_nim_b.png \
icon_rec_light.png \
icon_rec_off.png \
icon_rec.png \
icon_sd.png \
icons_off.png \
icon_subchannels.png \
icon_sub.png \
icon_txt.png \
icon_update_off.png \
icon_update.png \
icon_view.png \
ico_service_group-fs8.png \
ico_stream-fs8.png \
ico_txt_off.png \
ico_txt_on.png \
inadynsettings.png \
infopanel_cron.png \
infopanel_epg.png \
infopanel_ftp.png \
infopanel_kmod.png \
infopanel_lcd.png \
infopanel_nfs.png \
infopanel_osd.png \
infopanel_samba.png \
infopanel_service.png \
infopanel_space.png \
infopanel_telnet.png \
infopanel_vpn.png \
input_error.png \
input_info.png \
input_keyboard-configured.png \
input_keyboard.png \
input_mouse-configured.png \
input_mouse.png \
input_question.png \
input_rcnew-configured.png \
input_rcnew.png \
input_rcold-configured.png \
input_rcold.png \
ipkpackpanel.png \
lockBouquet.png \
lock_error.png \
lock_off.png \
lock_on.png \
lock.png \
loop.png \
marker.png \
mountwizard.png \
movielist.png \
movie_play.png \
movie_play_rec.png \
mp_buttons.png \
nabcams.png \
nabkeys.png \
nablangs.png \
nabpackpanel.png \
nabpicons.png \
nabplugins.png \
nabscript.png \
nabsettings.png \
nabskins.png \
nabuploads.png \
nactive.png \
network_wired-active.png \
network_wired-inactive.png \
network_wired.png \
network_wireless-active.png \
network_wireless-inactive.png \
network_wireless.png \
newtop.png \
NimA_Active.png \
nim_active.png \
NimB_Active.png \
NimC_Active.png \
NimD_Active.png \
ninactive.png \
no_coverArt.png \
off_icons.png \
oldtop.png \
part_0_4.png \
part_1_4.png \
part_2_4.png \
part_3_4.png \
part_4_4.png \
part_new.png \
part_unwatched.png \
pause.png \
pic_frame.png \
playlist.png \
playlistquit.png \
plilogo-fs8.png \
plugin_list_setup.png \
plugin.png \
quit.png \
rass_logo.png \
rass_page1.png \
rass_page2.png \
rass_page3.png \
rass_page4.png \
rass.png \
record.png \
rec.png \
redx.png \
repeat_off.png \
repeat_on.png \
repepgclock_add.png \
repepgclock.png \
repepgclock_post.png \
repepgclock_pre.png \
repepgclock_prepost.png \
rep.png \
repzapclock_add.png \
repzapclock.png \
repzapclock_post.png \
repzapclock_pre.png \
repzapclock_prepost.png \
repzaprecclock_add.png \
repzaprecclock.png \
repzaprecclock_post.png \
repzaprecclock_pre.png \
repzaprecclock_prepost.png \
stream.png \
scan-c.png \
scan-s.png \
scan-t.png \
selectioncross.png \
shuffle.png \
statpanel.png \
swapsettings.png \
timer_done.png \
timer_off.png \
timer.png \
timer_prep.png \
timer_rec.png \
timer_rep.png \
timer_wait.png \
timer_zap.png \
trashcan.png \
unhandled-key.png \
uninstpanel.png \
unlockBouquet.png \
unlock.png \
vlc.png \
zapclock_add.png \
zapclock.png \
zapclock_post.png \
zapclock_pre.png \
zapclock_prepost.png \
za.png \
zaprecclock_add.png \
zaprecclock.png \
zaprecclock_post.png \
zaprecclock_pre.png \
zaprecclock_prepost.png
