installdir = $(pkgdatadir)/skin_default/menu

dist_install_DATA = \
arrow1.png \
arrow_bp.png \
arrow_h.png \
bg1180x113.png \
bg1180x40c.png \
bg1180x40.png \
bg1180x45.png \
bg1260x120.png \
bg1260x136.png \
bg1260x35.png \
bg1260x40.png \
bg1260x75.png \
bg560x35.png \
bg800x35.png \
bg820x105a.png \
bg820x105.png \
bg820x150.png \
bg820x28.png \
bg820x32.png \
bg820x35.png \
bg820x40.png \
bg820x50.png \
bg820x55.png \
bg820x60.png \
bg820x75.png \
bg820x90.png \
bg840x35b.png \
bg900x118.png \
bm.png \
button1180x113.png \
button1180x40c.png \
button1180x40.png \
button1180x45.png \
button1260x120.png \
button1260x136.png \
button1260x35.png \
button1260x40.png \
button1260x75.png \
button210x50.png \
button560x35.png \
button650x35.png \
button800x35.png \
button820x105a.png \
button820x105.png \
button820x150.png \
button820x28.png \
button820x32.png \
button820x35.png \
button820x40a.png \
button820x40.png \
button820x50.png \
button820x60.png \
button820x90.png \
button840x35b.png \
button900x118.png \
ck.png \
cover_bg.png \
div620.png \
div800.png \
epg3.png \
epg.png \
exit2.png \
exit3.png \
exit.png \
film.png \
medialist.png \
menubutton3.png \
menubutton.png \
movie2.png \
movie3.png \
ok2.png \
ok_bp.png \
ok.png \
picc.png \
pvr.png \
radioinfobar.png \
sel820x55.png \
sel820x60.png \
sel820x75.png \
select300_45black.png \
setupp.png
